# autonomous-incident-response-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.example.yaml  docker-compose.n8n.yml  docker-compose.yml  execution.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy-dev.yml
app/: __init__.py
app/agent/: __init__.py  cli.py  graph.py  llm_usage.py  nodes.py  operational_policy.py  prompts.py  signal_reasoning.py
app/api/: __init__.py  admin_routes.py  audit.py  main.py  metrics_log.py  n8n_routes.py  operator_routes.py  security.py  server.py  triage_execution.py
app/config/: __init__.py  settings.py
app/eval/: __init__.py  cli.py  metrics.py  report.py  runner.py  schema.py
app/models/: __init__.py  incident.py  triage.py
app/product/: __init__.py  cli.py  workspace_layout.py
app/rag/: __init__.py  chunking.py  cli.py  config.py  embeddings.py  index_store.py  loader.py  retrieve.py
app/ui/: __init__.py  gradio_app.py  triage_display.py
app/workspace/: __init__.py  paths.py
data/: README.md
data/eval/: README.md  gold.jsonl
data/incidents/: README.md  incident-01-high-cpu-post-deployment.md  incident-02-memory-leak-oomkills.md  incident-03-http-503-unhealthy-targets.md  incident-04-database-connection-exhaustion.md  incident-05-kubernetes-missing-secret-crashloop.md  (+16 more)
docs/: README.md  bring-your-own-data.md  configuration.md  contributing.md  installation.md  operator-ui-walkthrough.md  reindexing.md  security.md  troubleshooting.md
examples/: sample_incident_payload.json
frontend/: .dockerignore  .env.development  .env.example  .env.production  .gitignore  Dockerfile  README.md  next.config.ts  nginx.default.conf  package-lock.json  package.json
sample_data/: README.md
scripts/: benchmark_triage_latency.sh  e2e_stack_check.sh  generate_eval_gold.py
tests/: conftest.py
workspaces/: README.md
(+141 files in other folders)
