[project]
name = "autonomous-incident-response-agent"
version = "0.1.0"
description = "Autonomous DevOps incident response — RAG, agent, API (phased build)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40.0",
    "faiss-cpu>=1.8.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.6.0"]

[project.scripts]
rag-build = "app.rag.cli:main_build"
rag-query = "app.rag.cli:main_query"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
